auth update final
